--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,63 @@ endorsed.classpath=
 excludes=
 file.reference.ApacheJMeter_core.jar=C:\\Java\\apache-jmeter-5.4.3\\lib\\ext\\ApacheJMeter_core.jar
 file.reference.ApacheJMeter_java.jar=C:\\Java\\apache-jmeter-5.4.3\\lib\\ext\\ApacheJMeter_java.jar
+file.reference.commons-codec-1.15.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-codec-1.15.jar
+file.reference.commons-io-2.10.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-io-2.10.0.jar
+file.reference.commons-lang3-3.12.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-lang3-3.12.0.jar
+file.reference.commons-logging-1.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-logging-1.2.jar
+file.reference.commons-net-3.8.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-net-3.8.0.jar
+file.reference.commons-text-1.9.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-text-1.9.jar
+file.reference.dec-0.1.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\dec-0.1.2.jar
+file.reference.htmlunit-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-2.62.0.jar
+file.reference.htmlunit-core-js-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-core-js-2.62.0.jar
+file.reference.htmlunit-cssparser-1.12.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-cssparser-1.12.0.jar
+file.reference.httpclient-4.5.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpclient-4.5.13.jar
+file.reference.httpcore-4.4.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpcore-4.4.13.jar
+file.reference.httpmime-4.5.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpmime-4.5.13.jar
+file.reference.jetty-client-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-client-9.4.46.v20220331.jar
+file.reference.jetty-http-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-http-9.4.46.v20220331.jar
+file.reference.jetty-io-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-io-9.4.46.v20220331.jar
+file.reference.jetty-util-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-util-9.4.46.v20220331.jar
+file.reference.neko-htmlunit-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\neko-htmlunit-2.62.0.jar
+file.reference.salvation2-3.0.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\salvation2-3.0.0.jar
+file.reference.serializer-2.7.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\serializer-2.7.2.jar
+file.reference.websocket-api-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-api-9.4.46.v20220331.jar
+file.reference.websocket-client-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-client-9.4.46.v20220331.jar
+file.reference.websocket-common-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-common-9.4.46.v20220331.jar
+file.reference.xalan-2.7.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\xalan-2.7.2.jar
+file.reference.xercesImpl-2.12.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\xercesImpl-2.12.2.jar
+file.reference.xml-apis-1.4.01.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\xml-apis-1.4.01.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ApacheJMeter_core.jar}:\
-    ${file.reference.ApacheJMeter_java.jar}
+    ${file.reference.ApacheJMeter_java.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-io-2.10.0.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-net-3.8.0.jar}:\
+    ${file.reference.commons-text-1.9.jar}:\
+    ${file.reference.dec-0.1.2.jar}:\
+    ${file.reference.htmlunit-2.62.0.jar}:\
+    ${file.reference.htmlunit-core-js-2.62.0.jar}:\
+    ${file.reference.htmlunit-cssparser-1.12.0.jar}:\
+    ${file.reference.httpclient-4.5.13.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.httpmime-4.5.13.jar}:\
+    ${file.reference.jetty-client-9.4.46.v20220331.jar}:\
+    ${file.reference.jetty-http-9.4.46.v20220331.jar}:\
+    ${file.reference.jetty-io-9.4.46.v20220331.jar}:\
+    ${file.reference.jetty-util-9.4.46.v20220331.jar}:\
+    ${file.reference.neko-htmlunit-2.62.0.jar}:\
+    ${file.reference.salvation2-3.0.0.jar}:\
+    ${file.reference.serializer-2.7.2.jar}:\
+    ${file.reference.websocket-api-9.4.46.v20220331.jar}:\
+    ${file.reference.websocket-client-9.4.46.v20220331.jar}:\
+    ${file.reference.websocket-common-9.4.46.v20220331.jar}:\
+    ${file.reference.xalan-2.7.2.jar}:\
+    ${file.reference.xercesImpl-2.12.2.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
