--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,26 +31,90 @@ endorsed.classpath=
 excludes=
 file.reference.ApacheJMeter_core.jar=C:\\Java\\apache-jmeter-5.4.3\\lib\\ext\\ApacheJMeter_core.jar
 file.reference.ApacheJMeter_java.jar=C:\\Java\\apache-jmeter-5.4.3\\lib\\ext\\ApacheJMeter_java.jar
+file.reference.async-http-client-2.12.3.jar=C:\\Java\\selenium-java-4.2.1\\lib\\async-http-client-2.12.3.jar
+file.reference.async-http-client-netty-utils-2.12.3.jar=C:\\Java\\selenium-java-4.2.1\\lib\\async-http-client-netty-utils-2.12.3.jar
+file.reference.auto-common-1.2.1.jar=C:\\Java\\selenium-java-4.2.1\\lib\\auto-common-1.2.1.jar
+file.reference.auto-service-1.0.1.jar=C:\\Java\\selenium-java-4.2.1\\lib\\auto-service-1.0.1.jar
+file.reference.auto-service-annotations-1.0.1.jar=C:\\Java\\selenium-java-4.2.1\\lib\\auto-service-annotations-1.0.1.jar
+file.reference.byte-buddy-1.12.10.jar=C:\\Java\\selenium-java-4.2.1\\lib\\byte-buddy-1.12.10.jar
+file.reference.checker-qual-3.12.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\checker-qual-3.12.0.jar
 file.reference.commons-codec-1.15.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-codec-1.15.jar
+file.reference.commons-exec-1.3.jar=C:\\Java\\selenium-java-4.2.1\\lib\\commons-exec-1.3.jar
 file.reference.commons-io-2.10.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-io-2.10.0.jar
 file.reference.commons-lang3-3.12.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-lang3-3.12.0.jar
 file.reference.commons-logging-1.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-logging-1.2.jar
 file.reference.commons-net-3.8.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-net-3.8.0.jar
 file.reference.commons-text-1.9.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\commons-text-1.9.jar
 file.reference.dec-0.1.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\dec-0.1.2.jar
+file.reference.error_prone_annotations-2.11.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\error_prone_annotations-2.11.0.jar
+file.reference.failsafe-3.2.4.jar=C:\\Java\\selenium-java-4.2.1\\lib\\failsafe-3.2.4.jar
+file.reference.failureaccess-1.0.1.jar=C:\\Java\\selenium-java-4.2.1\\lib\\failureaccess-1.0.1.jar
+file.reference.guava-31.1-jre.jar=C:\\Java\\selenium-java-4.2.1\\lib\\guava-31.1-jre.jar
 file.reference.htmlunit-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-2.62.0.jar
 file.reference.htmlunit-core-js-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-core-js-2.62.0.jar
 file.reference.htmlunit-cssparser-1.12.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\htmlunit-cssparser-1.12.0.jar
 file.reference.httpclient-4.5.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpclient-4.5.13.jar
 file.reference.httpcore-4.4.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpcore-4.4.13.jar
 file.reference.httpmime-4.5.13.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\httpmime-4.5.13.jar
+file.reference.j2objc-annotations-1.3.jar=C:\\Java\\selenium-java-4.2.1\\lib\\j2objc-annotations-1.3.jar
+file.reference.jakarta.activation-1.2.2.jar=C:\\Java\\selenium-java-4.2.1\\lib\\jakarta.activation-1.2.2.jar
+file.reference.jcommander-1.82.jar=C:\\Java\\selenium-java-4.2.1\\lib\\jcommander-1.82.jar
 file.reference.jetty-client-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-client-9.4.46.v20220331.jar
 file.reference.jetty-http-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-http-9.4.46.v20220331.jar
 file.reference.jetty-io-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-io-9.4.46.v20220331.jar
 file.reference.jetty-util-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\jetty-util-9.4.46.v20220331.jar
+file.reference.jsr305-3.0.2.jar=C:\\Java\\selenium-java-4.2.1\\lib\\jsr305-3.0.2.jar
+file.reference.jtoml-2.0.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\jtoml-2.0.0.jar
+file.reference.junit-4.13.2.jar=C:\\Java\\junit\\junit-4.13.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=C:\\Java\\selenium-java-4.2.1\\lib\\listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
 file.reference.neko-htmlunit-2.62.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\neko-htmlunit-2.62.0.jar
+file.reference.netty-buffer-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-buffer-4.1.77.Final.jar
+file.reference.netty-codec-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-codec-4.1.77.Final.jar
+file.reference.netty-codec-http-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-codec-http-4.1.77.Final.jar
+file.reference.netty-codec-socks-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-codec-socks-4.1.77.Final.jar
+file.reference.netty-common-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-common-4.1.77.Final.jar
+file.reference.netty-handler-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-handler-4.1.77.Final.jar
+file.reference.netty-handler-proxy-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-handler-proxy-4.1.77.Final.jar
+file.reference.netty-reactive-streams-2.0.4.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-reactive-streams-2.0.4.jar
+file.reference.netty-resolver-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-resolver-4.1.77.Final.jar
+file.reference.netty-transport-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-4.1.77.Final.jar
+file.reference.netty-transport-classes-epoll-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-classes-epoll-4.1.77.Final.jar
+file.reference.netty-transport-classes-kqueue-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-classes-kqueue-4.1.77.Final.jar
+file.reference.netty-transport-native-epoll-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-native-epoll-4.1.77.Final.jar
+file.reference.netty-transport-native-kqueue-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-native-kqueue-4.1.77.Final.jar
+file.reference.netty-transport-native-unix-common-4.1.77.Final.jar=C:\\Java\\selenium-java-4.2.1\\lib\\netty-transport-native-unix-common-4.1.77.Final.jar
+file.reference.opentelemetry-api-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-api-1.14.0.jar
+file.reference.opentelemetry-context-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-context-1.14.0.jar
+file.reference.opentelemetry-exporter-logging-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-exporter-logging-1.14.0.jar
+file.reference.opentelemetry-sdk-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-1.14.0.jar
+file.reference.opentelemetry-sdk-common-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-common-1.14.0.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-1.14.0-alpha.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-extension-autoconfigure-1.14.0-alpha.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-extension-autoconfigure-spi-1.14.0.jar
+file.reference.opentelemetry-sdk-logs-1.14.0-alpha.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-logs-1.14.0-alpha.jar
+file.reference.opentelemetry-sdk-metrics-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-metrics-1.14.0.jar
+file.reference.opentelemetry-sdk-trace-1.14.0.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-sdk-trace-1.14.0.jar
+file.reference.opentelemetry-semconv-1.14.0-alpha.jar=C:\\Java\\selenium-java-4.2.1\\lib\\opentelemetry-semconv-1.14.0-alpha.jar
+file.reference.reactive-streams-1.0.3.jar=C:\\Java\\selenium-java-4.2.1\\lib\\reactive-streams-1.0.3.jar
 file.reference.salvation2-3.0.0.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\salvation2-3.0.0.jar
+file.reference.selenium-api-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-api-4.2.1.jar
+file.reference.selenium-chrome-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-chrome-driver-4.2.1.jar
+file.reference.selenium-chromium-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-chromium-driver-4.2.1.jar
+file.reference.selenium-devtools-v100-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-devtools-v100-4.2.1.jar
+file.reference.selenium-devtools-v101-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-devtools-v101-4.2.1.jar
+file.reference.selenium-devtools-v102-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-devtools-v102-4.2.1.jar
+file.reference.selenium-devtools-v85-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-devtools-v85-4.2.1.jar
+file.reference.selenium-edge-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-edge-driver-4.2.1.jar
+file.reference.selenium-firefox-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-firefox-driver-4.2.1.jar
+file.reference.selenium-http-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-http-4.2.1.jar
+file.reference.selenium-ie-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-ie-driver-4.2.1.jar
+file.reference.selenium-java-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-java-4.2.1.jar
+file.reference.selenium-json-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-json-4.2.1.jar
+file.reference.selenium-opera-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-opera-driver-4.2.1.jar
+file.reference.selenium-remote-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-remote-driver-4.2.1.jar
+file.reference.selenium-safari-driver-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-safari-driver-4.2.1.jar
+file.reference.selenium-support-4.2.1.jar=C:\\Java\\selenium-java-4.2.1\\selenium-support-4.2.1.jar
 file.reference.serializer-2.7.2.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\serializer-2.7.2.jar
+file.reference.slf4j-api-1.7.36.jar=C:\\Java\\selenium-java-4.2.1\\lib\\slf4j-api-1.7.36.jar
 file.reference.websocket-api-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-api-9.4.46.v20220331.jar
 file.reference.websocket-client-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-client-9.4.46.v20220331.jar
 file.reference.websocket-common-9.4.46.v20220331.jar=C:\\Java\\htmlunit-2.62.0-bin\\htmlunit-2.62.0\\lib\\websocket-common-9.4.46.v20220331.jar
@@ -87,7 +151,71 @@ javac.classpath=\
     ${file.reference.websocket-common-9.4.46.v20220331.jar}:\
     ${file.reference.xalan-2.7.2.jar}:\
     ${file.reference.xercesImpl-2.12.2.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.selenium-api-4.2.1.jar}:\
+    ${file.reference.selenium-chrome-driver-4.2.1.jar}:\
+    ${file.reference.selenium-chromium-driver-4.2.1.jar}:\
+    ${file.reference.selenium-devtools-v100-4.2.1.jar}:\
+    ${file.reference.selenium-devtools-v101-4.2.1.jar}:\
+    ${file.reference.selenium-devtools-v102-4.2.1.jar}:\
+    ${file.reference.selenium-devtools-v85-4.2.1.jar}:\
+    ${file.reference.selenium-edge-driver-4.2.1.jar}:\
+    ${file.reference.selenium-firefox-driver-4.2.1.jar}:\
+    ${file.reference.selenium-http-4.2.1.jar}:\
+    ${file.reference.selenium-ie-driver-4.2.1.jar}:\
+    ${file.reference.selenium-java-4.2.1.jar}:\
+    ${file.reference.selenium-json-4.2.1.jar}:\
+    ${file.reference.selenium-opera-driver-4.2.1.jar}:\
+    ${file.reference.selenium-remote-driver-4.2.1.jar}:\
+    ${file.reference.selenium-safari-driver-4.2.1.jar}:\
+    ${file.reference.selenium-support-4.2.1.jar}:\
+    ${file.reference.async-http-client-2.12.3.jar}:\
+    ${file.reference.async-http-client-netty-utils-2.12.3.jar}:\
+    ${file.reference.auto-common-1.2.1.jar}:\
+    ${file.reference.auto-service-1.0.1.jar}:\
+    ${file.reference.auto-service-annotations-1.0.1.jar}:\
+    ${file.reference.byte-buddy-1.12.10.jar}:\
+    ${file.reference.checker-qual-3.12.0.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.error_prone_annotations-2.11.0.jar}:\
+    ${file.reference.failsafe-3.2.4.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.guava-31.1-jre.jar}:\
+    ${file.reference.j2objc-annotations-1.3.jar}:\
+    ${file.reference.jakarta.activation-1.2.2.jar}:\
+    ${file.reference.jcommander-1.82.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.jtoml-2.0.0.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.netty-buffer-4.1.77.Final.jar}:\
+    ${file.reference.netty-codec-4.1.77.Final.jar}:\
+    ${file.reference.netty-codec-http-4.1.77.Final.jar}:\
+    ${file.reference.netty-codec-socks-4.1.77.Final.jar}:\
+    ${file.reference.netty-common-4.1.77.Final.jar}:\
+    ${file.reference.netty-handler-4.1.77.Final.jar}:\
+    ${file.reference.netty-handler-proxy-4.1.77.Final.jar}:\
+    ${file.reference.netty-reactive-streams-2.0.4.jar}:\
+    ${file.reference.netty-resolver-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-classes-epoll-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-classes-kqueue-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-native-epoll-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-native-kqueue-4.1.77.Final.jar}:\
+    ${file.reference.netty-transport-native-unix-common-4.1.77.Final.jar}:\
+    ${file.reference.opentelemetry-api-1.14.0.jar}:\
+    ${file.reference.opentelemetry-context-1.14.0.jar}:\
+    ${file.reference.opentelemetry-exporter-logging-1.14.0.jar}:\
+    ${file.reference.opentelemetry-sdk-1.14.0.jar}:\
+    ${file.reference.opentelemetry-sdk-common-1.14.0.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-1.14.0-alpha.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.14.0.jar}:\
+    ${file.reference.opentelemetry-sdk-logs-1.14.0-alpha.jar}:\
+    ${file.reference.opentelemetry-sdk-metrics-1.14.0.jar}:\
+    ${file.reference.opentelemetry-sdk-trace-1.14.0.jar}:\
+    ${file.reference.opentelemetry-semconv-1.14.0-alpha.jar}:\
+    ${file.reference.reactive-streams-1.0.3.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
